$Id$

Changelog for Revisioning module for drupal 6.

6.x-1.0
=======
Initial drupal 6 release.

6.x-1.1
=======
o No error when Trigger module isn't installed (thanks: herzi)
o Improved translatability.
o Fixed &$ ref in line 350. (thanks: blcompton)

6.x-1.2
=======
o Only display content info when NO teaser is requested via hook_node_api('view') (patch by Ogredude)
o Fixed broken link shown in watchdog message when trigger is invoking action.
o Added German translations and .pot file (thanks: rastatt)

6.x-1.3
=======
o Added link to compare revisions when Diff module is enabled
o revisioning_node_api() won't intercept URI's that don't start with "/node/%"
o Don't show 'Show all revisions' link when 'Revisions' tab is also visible

6.x-1.4
=======
o Further improved translatability (requested by herzi, #420258)

6.x-2.0
=======
o Change of look & feel w.r.t to links above content.
o Made theming more flexible; use CSS

6.x-2.1
=======
o Tidied up theming. Removed obsolete file.

6.x-2.2
=======
o Removed revisioning operations from authenticated user's home page (occurred
  for themes employing engines).