@@ -14,15 +14,15 @@
 function revisioning_theme() {
   return array(
     'revision_submenu' => array(
-      'arguments' => array('links' => NULL),
+      'arguments' => array('submenu_links' => NULL),
       'template' => 'revision-submenu', // revision-submenu.tpl.php
     ),
     'revision' => array(
-      'arguments' => array('links' => NULL, 'content' => NULL),
+      'arguments' => array('submenu_links' => NULL, 'content' => NULL),
       'template' => 'revision', // revision.tpl.php
     ),
     'revisions_summary' => array(
-      'arguments' => array('links' => NULL, 'content' => NULL),
+      'arguments' => array('submenu_links' => NULL, 'content' => NULL),
       'template' => 'revisions-summary', // revisions-summary.tpl.php
     )
   );
@@ -36,6 +36,10 @@ function revisioning_theme() {
  * o 'table_revisions', falling back to theme.inc/theme_table() if not defined
  * o 'placeholder' (to display current revision status)
  * o 'username'
+ * Uses the following style-classes (see revisiong.css)
+ * o 'revision-current'
+ * o 'revision-pending'
+ * o 'revision-old'
  *
  * @param $node
  *   Node whose revisions to display
@@ -49,57 +53,58 @@ function _theme_revisions_summary($node) {
   drupal_add_css($css_path, 'module', 'all', FALSE); // also loads /revisioning-rtl.css
   
   drupal_set_title(t('Revisions of %title', array('%title' => $node->title)));
+  
   $show_taxonomy_terms = module_exists('taxonomy');
-
   $revisions = _get_all_revisions_for_node($node->nid, $show_taxonomy_terms);
 
   drupal_set_message(format_plural(count($revisions), 
     'This content has only one revision', 
     'This content has @count revisions.'));
-  
-  // Set up some links according to grants
-  $links = array();
-  if ($node->status && module_grants_node_revision_access('unpublish current revision', $node)) {
-    $links[] = l(t('Unpublish current revision'), "node/$node->nid/unpublish");
-  }
-  if (module_grants_node_revision_access('delete revisions', $node)) {
-    $links[] = l(t('Delete all revisions'), "node/$node->nid/delete");
-  }
+
   // Set up the header
   $header = array(t('Revision'));
   if ($show_taxonomy_terms) {
     $header[] = t('Term');
   }
   $header[] = t('Status');
+  
   $rows = array();
-
   foreach ($revisions as $revision) {
+    $is_current = ($revision->vid == $node->vid);
+    $is_pending = ($revision->vid > $node->vid);
     $row = array();
     $base_url = "node/$node->nid/revisions/$revision->vid";
+    
     $first_cell = t('Saved !date by !username', 
       array('!date' => l(format_date($revision->timestamp, 'small'), "$base_url/view"),
             '!username' => theme('username', $revision)))
       . ($revision->log != '' ? '<p class="revision-log">'. filter_xss($revision->log) .'</p>' : '');
-    if ($revision->vid == $node->vid) {
-      $row[] = array('data' => $first_cell, 'class' => 'revision-current');
-      if ($show_taxonomy_terms) {
-        $row[] = array('data' => $revision->term, 'class' => 'revision-current');
-      }
+  
+    $style_class = $is_current ? 'revision-current' : ($is_pending ? 'revision-pending' : 'revision-old');
+
+    // First column: saved date + author
+    $row[] = array('data' => $first_cell, 'class' => $style_class);
+    
+    // Term
+    if ($show_taxonomy_terms) {
+      $row[] = array('data' => $revision->term, 'class' => $style_class);
+    }
+    
+    // Status
+    if ($is_current) {
       $row[] = array('data' => theme('placeholder', $revision->status ? t('current revision (published)') : t('current revision (unpublished)')),
-                     'class' => 'revision-current');
+                     'class' => $style_class);
     }
     else {
-      $row[] = array('data' => $first_cell);
-      if ($show_taxonomy_terms) {
-        $row[] = array('data' => $revision->term);
-      }
-      $row[] = array('data' => ($revision->vid > $node->vid) ? t('pending moderation') : t('old'));
+      $row[] = array('data' => $is_pending ? t('pending moderation') : t('old'), 
+                     'class' => $style_class);
     }
     $rows[] = $row;
   }
   $attributes = array('class' => 'table-revisions');
   $content = theme(array('table_revisions', 'table'), $header, $rows, $attributes, $caption = NULL);
-  return theme(array('revisions_summary'), $links, $content);
+  $submenu_links = generate_node_links_according_to_permissions($node);
+  return theme(array('revisions_summary'), $submenu_links, $content);
 }
 
 /**
@@ -123,8 +128,9 @@ function theme_table_revisions($header, $rows) {
  * Gets called after the node has been fleshed out, but before it is rendered
  * (via node.tpl.php). This gives us the opportunity to insert on the page some 
  * hyperlinks that operate on the content shown, provided the theme is rendered
- * through an ENGINE -- Chameleon, for instance, is NOT.
- * Earlier versions did this by (ab)using drupal_set_message($links).
+ * through an ENGINE -- Chameleon, for instance, is NOT, see
+ * _theme_content_menu().
+ * Earlier versions did this by (ab)using drupal_set_message($submenu_links).
  * Here we prepend the links, themed as a 'revision', to the content. 
  * This ensures the links are visible in all existing templates.
  * 
@@ -142,8 +148,8 @@ function revisioning_preprocess_node(&$variables) {
   }
   $css_path = drupal_get_path('module', 'revisioning') .'/revisioning.css';
   drupal_add_css($css_path, 'module', 'all', FALSE); // also loads /revisioning-rtl.css
-  $links = generate_links_according_to_permissions($variables['node']);
-  $variables['content'] = theme(array('revision'), $links, $variables['content']);
+  $submenu_links = generate_revision_links_according_to_permissions($variables['node']);
+  $variables['content'] = theme(array('revision'), $submenu_links, $variables['content']);
 }
 
 /**
@@ -160,6 +166,6 @@ function revisioning_preprocess_node(&$variables) {
 function _theme_content_menu(&$node) {
   $css_path = drupal_get_path('module', 'revisioning') .'/revisioning.css';
   drupal_add_css($css_path, 'module', 'all', FALSE); // also loads /revisioning-rtl.css
-  $links = generate_links_according_to_permissions($node);
-  $node->body = theme(array('revision_submenu', 'submenu'), $links) . $node->body;
+  $submenu_links = generate_revision_links_according_to_permissions($node);
+  $node->body = theme(array('revision_submenu', 'submenu'), $submenu_links) . $node->body;
 }
